--- a/wrangler.example.toml
+++ b/wrangler.example.toml
@@ -2,12 +2,13 @@
 name = "meow-app"
 main = "worker.js"
 compatibility_date = "2023-12-01"
+account_id = "a7fc2aaed38138b414cb55eaa93dd0eb"
 
 # D1 数据库绑定
 [[d1_databases]]
 binding = "DB" # 在Worker代码中通过 env.DB 访问
 database_name = "meow-app-db" # 数据库名称
-database_id = "your-database-id" # 替换为你的D1数据库ID
+database_id = "1b4dd5a3-9560-456d-8d57-070b1ace454e" # 替换为你的D1数据库ID
 
 # 环境变量
 [env.production.vars]
