--- a/wrangler.example.toml
+++ b/wrangler.example.toml
@@ -7,18 +7,21 @@ account_id = "a7fc2aaed38138b414cb55eaa93dd0eb"
 # D1 数据库绑定
 [[d1_databases]]
 binding = "DB" # 在Worker代码中通过 env.DB 访问
-database_name = "meow-app-db" # 数据库名称
+database_name = "meow-app-db"
 database_id = "1b4dd5a3-9560-456d-8d57-070b1ace454e" # 替换为你的D1数据库ID
 
 # 环境变量
 [env.production.vars]
 ENVIRONMENT = "production"
+PASSWORD = "273299033lee"
 
 [env.staging.vars]
 ENVIRONMENT = "staging"
+PASSWORD = "273299033lee"
 
 [env.development.vars]
 ENVIRONMENT = "development"
+PASSWORD = "273299033lee"
 
 # 静态站点配置（如果使用Cloudflare Pages）
 [site]
@@ -29,5 +32,4 @@ bucket = "./build" # 构建输出目录
 # routes = [
 #   { pattern = "your-domain.com", custom_domain = true },
 #   { pattern = "api.your-domain.com/*", zone_name = "your-domain.com" }
-# ]
 # ]
